--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -18,7 +18,7 @@ body {
 main {
   margin: 5vw;
   max-width: 1080px;
-  min-height: 60vh;
+  min-height: 70vh;
   @media screen and (min-width: 1080px) {
     margin: 5vw auto;
   }
